# libfreenect2_stand_alone

./: CMakeLists.txt  README.md
data/017732145047/: calib_color.yaml  calib_pose.yaml  external_Parameters_017732145047.xml
data/018470145047/: calib_depth.yaml  external_Parameters_018470145047.xml
data/019228645047/: calib_ir.yaml  external_Parameters_019228645047.xml  world_to_robot.xml
data/019320645047/: external_Parameters_019320645047.xml  robToCheck.xml
data/196605135147/: multisensorconnection_robot _2016_11_14_beide_Kameras_qt - Verknüpfung.lnk
data/501733243142/: external_Parameters_501733243142.xml
data/Default/: Level_1_Fall_A.xml  Level_1_Fall_B.xml  Level_2_Fall_A.xml  Level_2_Fall_B.xml  Level_3_Fall_A.xml  Level_3_Fall_B.xml  Level_4_Fall_A.xml  Level_4_Fall_B.xml
include/libfreenect2/: config.h  frame_listener.hpp  libfreenect2.hpp  packet_pipeline.h  registration.h
lib/Debug/: Kinect2Calibd.lib  WorldFramed.lib  freenect2d.exp  freenect2d.lib  kinect2_registrationd.lib
lib/Release/: HSVDetect.lib  Kinect2Calib.lib  WorldFrame.lib  freenect2.exp  freenect2.lib  kinect2_registration.lib
src/: VideoProcessor.cpp  VideoProcessor.h  VideoStreamer.cpp  VideoStreamer.h  WorldFrame.cpp  WorldFrame.h  hsv_detect_offline.cpp  hsv_kinect_v2_.cpp  kinect_v2.cpp
src/Kinect2Calib/: kinect2_calib.cpp  kinect2_calib.h
src/VideoStreamer/: VideoStreamer.h
src/WorldFrame/: WorldFrame.cpp
